# battery_simulation

./: Cargo.toml  README.md  pyproject.toml
crates/battery_sim/: Cargo.toml
crates/battery_sim/data/: test_data.csv
crates/battery_sim/src/: battery.rs  lib.rs
crates/battery_sim_py/: Cargo.toml
crates/battery_sim_py/src/: lib.rs
scripts/: example.py
src/: battery.rs  battery_commented.rs  control.rs  data.rs  lib.rs  main.rs  simulation.rs  types.rs
tests/: test_battery_sim.py
